--- a/vectortiles/index.html
+++ b/vectortiles/index.html
@@ -57,21 +57,33 @@
 				var prop = etymology[0].properties;
 				var html = '';
 				console.log(prop);
-				html = "<h2>"+prop["name"]+"</h2>";
+				html = "<h2>"+prop["name"];
+				if(prop["wikidata"]) {
+					var wikidata = JSON.parse(prop["wikidata"]);
+					html += " (";
+					wikidata.forEach((wd) => {html += "<a href='https://www.wikidata.org/wiki/"+wd+"' target='_blank'>"+wd+"</a> ";});
+					html += ")";
+				}
+				html += "</h2>";
 				if(prop["name:etymology:wikidata"]) {
-					// TODO: :name
+					var wikidata = JSON.parse(prop["name:etymology:wikidata"]);
+					var name = JSON.parse(prop["name:etymology:wikidata:name"])
 					var gender = "";
 					if(prop["name:etymology:wikidata:gender"]) {
 						gender = " ("+prop["name:etymology:wikidata:gender"]+")";
 					}
-					html += "<h3><a href='https://www.wikidata.org/wiki/"+prop["name:etymology:wikidata"]+"' target='_blank'>"+prop["name:etymology:wikidata"]+"</a>: " + 
-						prop["name:etymology:wikidata:name"]+gender+"</h3>"
+					html += "<h3>";
+					wikidata.forEach((wd) => {html += "<a href='https://www.wikidata.org/wiki/"+wd+"' target='_blank'>"+wd+"</a> ";});
+					html += ": ";
+					name.forEach((n) => {html += n+" ";});
+					html += gender + "</h3>"
 				} else {
 					html += "<p>No Tag <a href='https://wiki.openstreetmap.org/wiki/Key:name:etymology:wikidata' target='_blank'>name:etymology:wikidata</a> found.</p>"
 				}
 				
 				if(prop["name:etymology:wikidata:description"]) {
-					html += "<p>"+prop["name:etymology:wikidata:description"]+"</p>";
+					var description = JSON.parse(prop["name:etymology:wikidata:description"]);
+					description.forEach((desc) => {html += "<p>"+desc+"</p>"});
 				}
 
 				if(prop["name:etymology:wikidata:birth"]) {
@@ -82,8 +94,19 @@
 					html += "<p>Classification: "+prop["name:etymology:wikidata:classification"]+"</p>";
 				}
 
-				if (prop["geometry"] == 'linestring') {
-					html += "<p><a href='https://openstreetmap.org/way/"+prop["id"]+"' target='_blank'>Show on osm.org</a></p>"
+				
+				if (prop["osm_ids"]) {
+					var osm_ids = JSON.parse(prop["osm_ids"]);
+					html += "<p><a href='https://openstreetmap.org/way/"+osm_ids[0]+"' target='_blank'>Show on osm.org</a>"
+					var josm_link = 'http://localhost:8111/load_object?objects=';
+					osm_ids.forEach((osm_id) => {
+						if (osm_id > 0) {
+							josm_link += "w"+osm_id+",";
+						}else{
+							josm_link += "r"+(osm_id*-1)+",";
+						}
+					});
+					html += " | <a href='"+josm_link+"' target='_blank'>Edit in JOSM</a></p>"
 				}
 
 				document.getElementById('wikidata').innerHTML = html;
